<resources>
    <string name="app_name">merhabalar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_country_fragment">Go to Country Fragment</string>
    <string name="error_try_again">Error, Try Again!</string>
    <string name="images">images</string>
    <string name="name">Name</string>
    <string name="region">Region</string>
    <string name="capital">Capital</string>
    <string name="currency">Currency</string>
    <string name="language">Language</string>
    <string name="country_flag">Country Flag</string>
</resources>