<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.fragments.CountryFragment">

        <ImageView
            android:id="@+id/iv_flag_countryFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:padding="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/country_flag" />

        <TextView
            android:id="@+id/tv_name_countryFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/name"
            android:textSize="38sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_capital_countryFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/capital"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_region_countryFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/region"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_currency_countryFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/currency"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_language_countryFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/language"
            android:textSize="24sp" />

    </LinearLayout>
</layout>